examples/datalog/23_type_declarations/03_multiple_types.dl.out
Executing script: examples/datalog/23_type_declarations/03_multiple_types.dl

> .db create test_multi_types
Database 'test_multi_types' created.
Switched to database: test_multi_types
> .db use test_multi_types
Switched to database: test_multi_types
> type ProductId: int.
Type 'ProductId' declared.
> type Price: int.
Type 'Price' declared.
> type Quantity: int.
Type 'Quantity' declared.
> type ProductName: string.
Type 'ProductName' declared.
> +products(id: ProductId, name: ProductName, price: Price).
Persistent schema 'products' declared: (id: TypeRef("ProductId"), name: TypeRef("ProductName"), price: TypeRef("Price"))
> +inventory(product_id: ProductId, qty: Quantity).
Persistent schema 'inventory' declared: (product_id: TypeRef("ProductId"), qty: TypeRef("Quantity"))
> +products[(1, "Widget", 100), (2, "Gadget", 200), (3, "Gizmo", 150)].
Script error: Line 19: Validation failed: Insert rejected for 'products': batch of 3 tuples violated constraints
